--- a/breaking-bad-characters/app/src/main/res/values/colors.xml
+++ b/breaking-bad-characters/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="screen_background_light_grey">#FFF2F2F2</color>
+    <color name="medium_grey">#FF868686</color>
 </resources>
