Handle loading states for characters list screen.

--- a/breaking-bad-characters/app/src/main/res/layout/screen_characters_list.xml
+++ b/breaking-bad-characters/app/src/main/res/layout/screen_characters_list.xml
@@ -22,4 +22,35 @@
         tools:listitem="@layout/list_item_characters_list"
         />
 
+    <ProgressBar
+        android:id="@+id/pb_progress_bar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:progress="100"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/loading_error_message"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/bt_reload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/reload_button"
+        app:layout_constraintTop_toBottomOf="@id/tv_error_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
